# SoftRenderProgram

./: CMakeLists.txt  README.md
log/: README.md
render/: CMakeLists.txt  rendering.cpp
render/core/math/: kmath.h  mat4x4.h  matrix.h  vec.h  vec2.h  vec3.h  vec4.h
render/core/utility/: sington.h  timer.cpp  timer.h
render/runtime/: dataloader.h  framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  window_system.cpp  window_system.h
render/runtime/Camera/: camera.cpp  camera.h
render/runtime/geometry/: rasterizestrategy.h  triangle.cpp  triangle.h  trianglelist.cpp  trianglelist.h  trianglestrategy.cpp  trianglestrategy.h  vertex.cpp  vertex.h  vertexdata.cpp  vertexdata.h
render/runtime/shader/: shader.cpp  shader.h  simplendcshader.cpp  simplendcshader.h
thirdPart/: CMakeLists.txt
thirdPart/ext/glad/: glad.c  glad.h
